hphp/test/slow/type_annotation/type_annotation_typeaccess7.php.expectf
Fatal error: when resolving type constant C::T, class D does not have non-abstract type constant T in %s on line 11
